lexer/src/snapshots/long_lexer__src_lexer__read_comments.snap
---
source: lexer/src/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Ident(
            "int",
        ),
        leading_space: false,
        hideset: {},
        loc: 1:1,
    },
    Token {
        kind: NewLine,
        leading_space: true,
        hideset: {},
        loc: 2:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: false,
        hideset: {},
        loc: 2:1,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {},
        loc: 2:5,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {},
        loc: 2:15,
    },
]
