lexer/src/snapshots/long_lexer__src_lexer__read_ints.snap
---
source: lexer/src/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Float(
            Double(
                0.123,
            ),
        ),
        leading_space: false,
        loc: 1:1,
    },
    Token {
        kind: Float(
            Double(
                10000000000.0,
            ),
        ),
        leading_space: true,
        loc: 1:6,
    },
    Token {
        kind: Int(
            Int(
                34567890,
            ),
        ),
        leading_space: true,
        loc: 1:12,
    },
    Token {
        kind: Int(
            Int(
                123,
            ),
        ),
        leading_space: true,
        loc: 1:21,
    },
    Token {
        kind: Int(
            LongLongInt(
                4300000000,
            ),
        ),
        leading_space: true,
        loc: 1:25,
    },
    Token {
        kind: Float(
            LongDouble(
                3.4,
            ),
        ),
        leading_space: true,
        loc: 1:36,
    },
    Token {
        kind: Float(
            Float(
                2.71,
            ),
        ),
        leading_space: true,
        loc: 1:41,
    },
    Token {
        kind: Float(
            Double(
                1.1,
            ),
        ),
        leading_space: true,
        loc: 1:47,
    },
    Token {
        kind: Float(
            Double(
                2.0,
            ),
        ),
        leading_space: true,
        loc: 1:51,
    },
    Token {
        kind: Int(
            Int(
                4095,
            ),
        ),
        leading_space: true,
        loc: 1:54,
    },
    Token {
        kind: Int(
            Int(
                983,
            ),
        ),
        leading_space: true,
        loc: 1:60,
    },
    Token {
        kind: Int(
            Int(
                33,
            ),
        ),
        leading_space: true,
        loc: 1:66,
    },
]
