lexer/src/snapshots/long_lexer__src_lexer__read_macro2.snap
---
source: lexer/src/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: NewLine,
        leading_space: false,
        hideset: {},
        loc: 2:1,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:1,
    },
    Token {
        kind: Ident(
            "f",
        ),
        leading_space: true,
        hideset: {},
        loc: 3:5,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:6,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:7,
    },
    Token {
        kind: Ident(
            "x",
        ),
        leading_space: true,
        hideset: {},
        loc: 3:11,
    },
    Token {
        kind: Symbol(
            Comma,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:12,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:14,
    },
    Token {
        kind: Ident(
            "y",
        ),
        leading_space: true,
        hideset: {},
        loc: 3:18,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:19,
    },
    Token {
        kind: Symbol(
            OpeningBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:21,
    },
    Token {
        kind: Keyword(
            Return,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:23,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: true,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Ident(
            "x",
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Symbol(
            Add,
        ),
        leading_space: true,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: true,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Ident(
            "y",
        ),
        leading_space: true,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: 3:30,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:37,
    },
    Token {
        kind: Symbol(
            ClosingBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:39,
    },
]
