lexer/src/snapshots/long_lexer__src_lexer__read_tokens.snap
---
source: lexer/src/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Ident(
            "int",
        ),
        leading_space: false,
        loc: 1:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: true,
        loc: 1:5,
    },
    Token {
        kind: NewLine,
        leading_space: false,
        loc: 2:1,
    },
    Token {
        kind: Ident(
            "long",
        ),
        leading_space: false,
        loc: 2:1,
    },
    Token {
        kind: Ident(
            "short",
        ),
        leading_space: true,
        loc: 2:6,
    },
]
