lexer/src/snapshots/long_lexer__src_lexer__read_tokens4.snap
---
source: lexer/src/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Ident(
            "int",
        ),
        leading_space: false,
        loc: 1:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: true,
        loc: 1:5,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        loc: 1:9,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        loc: 1:10,
    },
    Token {
        kind: Symbol(
            OpeningBrace,
        ),
        leading_space: true,
        loc: 1:12,
    },
    Token {
        kind: NewLine,
        leading_space: false,
        loc: 2:1,
    },
    Token {
        kind: Ident(
            "puts",
        ),
        leading_space: true,
        loc: 2:2,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        loc: 2:6,
    },
    Token {
        kind: String(
            "hello",
        ),
        leading_space: false,
        loc: 2:7,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        loc: 2:14,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        loc: 2:15,
    },
    Token {
        kind: NewLine,
        leading_space: false,
        loc: 3:1,
    },
    Token {
        kind: Symbol(
            ClosingBrace,
        ),
        leading_space: false,
        loc: 3:1,
    },
]
